--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           TARGET: /home/${{ secrets.USERNAME }}/app
 
       - name: Executing remote ssh commands using ssh key
-        uses: appleboy/ssh-action@main
+        uses: appleboy/ssh-action@v1.0.2
         with:
           host: ${{ secrets.HOST_DNS }}
           username: ${{ secrets.USERNAME }}
