--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,11 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
           
-            if ! java -version 2>&1 | grep -q "17"; then
-              echo "JDK 17 not found. Please install JDK 17."
+            if ! java -version 2>&1 | grep -q "21"; then
+              echo "JDK 21 not found. Please install JDK 21."
               exit 1
+            else
+              echo "JDK 21 is already installed."
             fi
 
             # Create the application directory if it doesn't exist
