--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,10 @@ jobs:
 
             # Create the application directory if it doesn't exist
             sudo mkdir -p /opt/myapp
+            # killing all java application running in ec2
+            sudo pkill -f 'java -jar'
+            # removing all jar files in opt/myapp
+            sudo rm -f /opt/myapp/*.jar
 
             # Move the JAR file to the application directory
             sudo mv /home/${{ secrets.USERNAME }}/app/*.jar /opt/myapp/
