--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,5 @@ jobs:
             # Get the latest JAR file
             # latest_jar=$(ls -t | grep .jar | head -n 1)
             # Run the latest JAR file
-            sudo nohup java -jar $latest_jar > app.log 2>&1 &
+            sudo nohup java -jar *.jar > app.log 2>&1 &
             sleep 10
