--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,11 @@ jobs:
 
             # Create the application directory if it doesn't exist
             sudo mkdir -p /opt/myapp
+
+            sleep 5
           
             # removing all jar files in opt/myapp
-            sudo rm -f /opt/myapp/*.jar
+            sudo rm -f /opt/myapp/*.jar || echo "No JAR files to remove."
 
             # Move the JAR file to the application directory
             sudo mv /home/${{ secrets.USERNAME }}/app/*.jar /opt/myapp/
