--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,5 @@ jobs:
             # Get the latest JAR file
             # latest_jar=$(ls -t | grep .jar | head -n 1)
             # Run the latest JAR file
-            sudo nohup java -jar userLogin.jar > app.log 2>&1 &
+            sudo java -jar userLogin.jar
             sleep 10
