--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,21 @@ jobs:
     steps:
     - name: Checkout the files
       uses: actions/checkout@v2
-
+      
+    - name: Remove old JAR files
+      uses: appleboy/ssh-action@v1.0.2
+      with:
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          # Navigate to the application directory
+          cd /home/${{ secrets.USERNAME }}/app
+          
+          # Remove all existing JAR files
+          sudo rm -f *.jar
+          echo "Old JAR files deleted."
+          
     - name: Deploy JAR to EC2
       uses: easingthemes/ssh-deploy@main
       env:
@@ -39,7 +53,7 @@ jobs:
 
           # Navigate to the application directory and run the JAR file
           cd /home/${{ secrets.USERNAME }}/app
-          sleep 10
+          sleep 5
 
           # Run the JAR file
           sudo java -jar *.jar &
