--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,28 +7,46 @@ on:
       - main
 
 jobs:
-  deploy:
-    name: Deploy to EC2 on main branch push
+  stop-app:
+    name: Stop existing application
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the files
       uses: actions/checkout@v2
-      
-    - name: Remove old JAR files
+
+    - name: Stop existing application
       uses: appleboy/ssh-action@v1.0.2
       with:
         host: ${{ secrets.HOST_DNS }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          # Find and kill the process running the JAR file
+          PID=$(pgrep -f 'java -jar /home/${{ secrets.USERNAME }}/app/.*\.jar')
+          if [ ! -z "$PID" ]; then
+            echo "Killing process $PID running the JAR file"
+            sudo kill -9 $PID
+          else
+            echo "No JAR file process found"
+          fi
+
           # Navigate to the application directory
           cd /home/${{ secrets.USERNAME }}/app
-          
+
           # Remove all existing JAR files
           sudo rm -f *.jar
           echo "Old JAR files deleted."
-          
+
+  deploy-jar:
+    name: Deploy JAR to EC2
+    runs-on: ubuntu-latest
+    needs: stop-app
+
+    steps:
+    - name: Checkout the files
+      uses: actions/checkout@v2
+
     - name: Deploy JAR to EC2
       uses: easingthemes/ssh-deploy@main
       env:
@@ -37,6 +55,12 @@ jobs:
         REMOTE_USER: ${{ secrets.USERNAME }}
         TARGET: /home/${{ secrets.USERNAME }}/app
 
+  start-app:
+    name: Start new application
+    runs-on: ubuntu-latest
+    needs: deploy-jar
+
+    steps:
     - name: Executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@v1.0.2
       with:
@@ -51,12 +75,11 @@ jobs:
             echo "JDK 17 is already installed."
           fi
 
-          # Navigate to the application directory and run the JAR file
+          # Navigate to the application directory
           cd /home/${{ secrets.USERNAME }}/app
-          sleep 5
 
-          # Run the JAR file
+          # Run the new JAR file
           sudo java -jar *.jar &
           sleep 10
 
-          echo "JAR file is running."
+          echo "New JAR file is running."
