--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,16 @@ jobs:
             echo "No JAR file process found"
           fi
 
+    - name: Remove old JAR files
+      uses: appleboy/ssh-action@v1.0.2
+      with:
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
           # Navigate to the application directory
           cd /home/${{ secrets.USERNAME }}/app
-
+          
           # Remove all existing JAR files
           sudo rm -f *.jar
           echo "Old JAR files deleted."
