--- a/.github/workflows/stop-and-clean.yml
+++ b/.github/workflows/stop-and-clean.yml
@@ -1,59 +1,46 @@
-name: Push-to-EC2
+name: Stop and Clean
 
-# Trigger deployment only on push to main branch
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  deploy:
-    name: Deploy to EC2 on main branch push
+  stop-and-clean:
+    name: Stop Existing Application and Clean Directory
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the files
       uses: actions/checkout@v2
-      
-    - name: Remove old JAR files
+
+    - name: Find and kill existing process on port 8084
       uses: appleboy/ssh-action@v1.0.2
       with:
         host: ${{ secrets.HOST_DNS }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          PID=$(sudo lsof -t -i :8084)
+          if [[ ! -z "$PID" ]]; then
+            echo "Killing process on port 8084 with PID $PID"
+            sudo kill -9 $PID
+          else
+            echo "No processes found listening on port 8084"
+          fi
+          
           # Navigate to the application directory
           cd /home/${{ secrets.USERNAME }}/app
-          
           # Remove all existing JAR files
           sudo rm -f *.jar
           echo "Old JAR files deleted."
-          
-    - name: Deploy JAR to EC2
-      uses: easingthemes/ssh-deploy@main
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-        REMOTE_HOST: ${{ secrets.HOST_DNS }}
-        REMOTE_USER: ${{ secrets.USERNAME }}
-        TARGET: /home/${{ secrets.USERNAME }}/app
-
-    - name: Executing remote ssh commands using ssh key
-      uses: appleboy/ssh-action@v1.0.2
-      with:
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          if ! java -version 2>&1 | grep -q "17"; then
-            echo "JDK 17 not found. Please install JDK 17."
-            exit 1
+          # Verify deletion
+          jar_files=$(ls /home/${{ secrets.USERNAME }}/app/*.jar 2> /dev/null)
+          if [[ -z "$jar_files" ]]; then
+            echo "No JAR files present."
           else
-            echo "JDK 17 is already installed."
+            echo "Some JAR files are still present:"
+            echo "$jar_files"
+            exit 1
           fi
-          # Navigate to the application directory and run the JAR file
-          cd /home/${{ secrets.USERNAME }}/app
-          sleep 5
-          # Run the JAR file
-          sudo java -jar *.jar &
-          sleep 10
-          echo "JAR file is running."
