--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,30 @@
-name: Deploy and Start
+name: Push-to-EC2
 
+# Trigger deployment only on push to main branch
 on:
-  workflow_run:
-    workflows: ["Stop and Clean"]
-    types:
-      - completed
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy-and-start:
-    name: Deploy New JAR and Start Application
+  deploy:
+    name: Deploy to EC2 on main branch push
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the files
       uses: actions/checkout@v2
-
-    - name: Deploy JAR to EC2
-      uses: easingthemes/ssh-deploy@main
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-        REMOTE_HOST: ${{ secrets.HOST_DNS }}
-        REMOTE_USER: ${{ secrets.USERNAME }}
-        TARGET: /home/${{ secrets.USERNAME }}/app
-
-    - name: Start new application
+      
+    - name: Remove old JAR files
       uses: appleboy/ssh-action@v1.0.2
       with:
         host: ${{ secrets.HOST_DNS }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          if ! java -version 2>&1 | grep -q "17"; then
-            echo "JDK 17 not found. Please install JDK 17."
-            exit 1
-          else
-            echo "JDK 17 is already installed."
-          fi
-
           # Navigate to the application directory
           cd /home/${{ secrets.USERNAME }}/app
-
-          # Run the new JAR file
-          sudo java -jar *.jar &
-          sleep 10
-
-          echo "New JAR file is running."
+          
+          # Remove all existing JAR files
+          sudo rm -f *.jar
+          echo "Old JAR files deleted."
