--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -49,11 +49,12 @@ jobs:
           else
             echo "JDK 17 is already installed."
           fi
+          cd /home/ubuntu/2024
           latest_jars=$(find . -name "*.jar" | sort | tail -n 1)
           echo "Extracted filename: $latest_jars"
           # Navigate to the application directory and run the new JAR file
           cd /home/${{ secrets.USERNAME }}/app
           latest_jars=$(basename "$latest_jars")
-          sudo java -jar \"$latest_jars\" &
+          sudo java -jar "$latest_jars" &
           sleep 10
           echo "New JAR file is running."
